04_Teste/exercicios_gerados/question_mdp_37_nova_linha/version_2/full_program_output.txt
Traceback (most recent call last):
  File "<string>", line 5
    b = 37 + 59 +
                ^
SyntaxError: invalid syntax